--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^2.0.3",
     "pg": "^8.1.0",
     "postgrator-cli": "^3.2.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "xss": "^1.0.6"
   }
 }
