--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.1.0",
     "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2",
+    "uuid": "^7.0.2",
     "xss": "^1.0.6"
   }
 }
